# treevisibility

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  vcpkg.json
docs/adr/: 20230705-build-system.md  20230705-dependency-manager.md  20230705-test-framework.md
example/: input
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/resources/: angles.hpp  constant.hpp
src/utils/: CMakeLists.txt  man.cpp  man.hpp  man_test.cpp  map.cpp  map.hpp  map_test.cpp  tree.cpp  tree.hpp  treeVisibilitySolver.cpp  treeVisibilitySolver.hpp  treeVisibilitySolver_test.cpp  tree_test.cpp  tree_visibility.cpp  tree_visibility.hpp  tree_visibility_test.cpp
